# EntryPointTests

./: CMakeLists.txt  EntryPointWithClassInstantiation.cpp  EntryPointWithClassInstantiationTest.cpp  EntryPointWithFactoryMethod.cpp  FactoryMethods.cpp  FactoryMethodsTest.cpp  HelperServiceBMock.cpp  HelperServiceBMock.h  ProjectMacros.cmake  ServiceClass.cpp  ServiceClass.h  ServiceClassInterface.h  ServiceFactoryTest.cpp  gtest-CMakeLists.txt
HelperServiceB/: CMakeLists.txt  HelperServiceB.h  HelperServiceBEntryPoint.cpp
ServiceLib/: CMakeLists.txt  EntryPointWithClassInstantiation.cpp  EntryPointWithFactoryClass.cpp  EntryPointWithFactoryMethod.cpp  FactoryMethods.cpp  FactoryMethods.h  HelperClassA.cpp  HelperClassA.h  HelperServiceB.cpp  HelperServiceB.h  HelperServiceBInterface.h  ServiceClass.cpp  ServiceClass.h  ServiceFactory.cpp  ServiceFactory.h
public/ServiceLib/: HelperClassAInterface.h
