add_library(ServiceLib SHARED
    EntryPointWithClassInstantiation.cpp
    EntryPointWithFactoryMethod.cpp
    FactoryMethods.cpp
    FactoryMethods.h
    HelperClassA.cpp
    HelperClassA.h
    HelperClassAInterface.h
    HelperServiceB.cpp
    HelperServiceB.h
    HelperServiceBInterface.h
    ServiceClass.cpp
    ServiceClass.h
    ServiceClassInterface.h
)
